src/tests/routes/trustpub/gitlab_configs/list/snapshots/integration__routes__trustpub__gitlab_configs__list__by_crate__happy_path-4.snap
---
source: src/tests/routes/trustpub/gitlab_configs/list/by_crate.rs
expression: response.json()
---
{
  "gitlab_configs": [
    {
      "crate": "bar",
      "created_at": "[datetime]",
      "environment": null,
      "id": 3,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "BAR",
      "workflow_filepath": ".gitlab-ci.yml"
    }
  ],
  "meta": {
    "next_page": null,
    "total": 1
  }
}
