src/tests/routes/trustpub/gitlab_configs/list/snapshots/integration__routes__trustpub__gitlab_configs__list__by_crate__pagination-8.snap
---
source: src/tests/routes/trustpub/gitlab_configs/list/by_crate.rs
expression: json
---
{
  "gitlab_configs": [],
  "meta": {
    "next_page": null,
    "total": 15
  }
}
